# rmk

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/rmonkey/: __init__.py
src/rmonkey/action/: __init__.py  tool_action.py
src/rmonkey/agents/: __init__.py  _base.py  ask_agent.py  root_monkey.py  swe_agent.py
src/rmonkey/entrypoints/cli/: main.py
src/rmonkey/llm/: __init__.py
src/rmonkey/llm/providers/: openai.py
src/rmonkey/memory/: __init__.py  memory.py
src/rmonkey/plan/: __init__.py  planning.py
src/rmonkey/tools/: __init__.py  _base.py  code_interpreter.py  human.py  terminal_bash.py  text_file_editor.py  think.py  tool_set.py
src/rmonkey/utils/: os_info.py  pretty_console.py  schema.py  user_rules.py  util.py
